--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
 [] Create Product detail page
-[] Fix responsive store page in mobile
-[] Complete All store fuatre
+[+] Fix responsive store page in mobile
+[+] Complete All store fuatre
+[+] Format price given and taken iranian 
+[] Improve header and footer
+[] Improve admin panel ui ux
+[] Create account section
