--- a/TODO
+++ b/TODO
@@ -1,7 +1,10 @@
-[+] Create Product detail page
+[+] Create Product detail page  
 [+] Fix responsive store page in mobile
 [+] Complete All store fuatre
 [+] Format price given and taken iranian 
 [] Improve header and footer
 [] Improve admin panel ui ux
 [] Create account section
+[] Zarinpal payment
+[] sotre.html responsive
+[] product_detail.html ui/ux Improve(deepseek)
