--- a/TODO
+++ b/TODO
@@ -11,7 +11,9 @@
 [] Zarinpal payment
 [] sotre.html responsive
 [] product_detail.html ui/ux Improve(deepseek)
+    - [] Breadcrumb
 [] Create Email (papelbar.ir@gmail.com)
 [+] Special Product ?
 [] sortSelect backend ajax fix (live ajax)
-[] css clean
+[+] css clean
+[] Category Create
